--- a/2 semestre/web/web-app/web-app.csproj
+++ b/2 semestre/web/web-app/web-app.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Image\" />
+  </ItemGroup>
+
 </Project>
